--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "predev": "rimraf dist && npx tsc",
     "dev": "npx tsc -w & nodemon dist/index.js",
-    "prestart": "npm run predev",
+    "prestart": "npm i && npm run predev",
     "start": "node dist/index.js"
   },
   "keywords": [],
